# mirumon-desktop-client-legacy

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  README.rst  lifespan.py  main.py  pyproject.toml  services.py  setup.cfg  utils.py  win_service.py
.github/actions-rs/: grcov.yml
.github/workflows/: audit.yml  ci.yml
app/: config.py  logging.py  main.py  services.py
app/schemas/: status.py
app/schemas/computer/: base.py  details.py  devices.py  hardware.py  overview.py  software.py  users.py
app/schemas/events/: base.py
app/schemas/events/computer/: details.py  shutdown.py
app/services/: events_handlers.py
app/services/wmi_api/: hardware.py  operating_system.py  software.py
mirumon/: config.py
mirumon-desktop/: Cargo.toml  README.md
mirumon-desktop/src/: cli.rs  logging.rs  main.rs
mirumon-windows/: Cargo.toml  README.md
mirumon-windows/src/: error.rs  hardware.rs  lib.rs  manager.rs  os.rs  software.rs  utils.rs
mirumon-windows/src/hardware/: models.rs  service.rs
mirumon-windows/src/os/: models.rs  service.rs
mirumon-windows/src/software/: models.rs  service.rs
mirumon/cli/: helpers.py  main.py  mirumon.py
mirumon/cli/commands/: core.py
mirumon/cli/groups/: core.py  windows.py
mirumon/client/: main.py
mirumon/infra/windows/backend/: hardware.py  operating_system.py  software.py
mirumon/schemas/: status.py
mirumon/schemas/computer/: base.py  details.py  hardware.py  software.py  users.py
mirumon/schemas/devices/: details.py  hardware.py  software.py  users.py
mirumon/schemas/events/: base.py  details.py
mirumon/schemas/events/computer/: details.py  execute.py
mirumon/services/: events_handlers.py
mirumon/services/wmi_api/: hardware.py  operating_system.py  software.py
mirumon/windows/: pyproject.toml
schemas/: components.py  computer.py  events.py  registration.py  schemas.py  status.py
schemas/computer/: devices.py  hardware.py  overview.py  software.py  users.py
schemas/events/: base.py
schemas/events/computer/: details.py
scripts/: format  format.bat  format.ps1  lint-style  lint.ps1
