[tool.poetry]
name = "mirumon-desktop-client"
version = "0.0.1"
description = "Windows monitoring client"
authors = ["Slyfoxy <khitrov34@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
wmi = "^1.4"
pypiwin32 = "^223.0"
pydantic = "^0.32.2"

[tool.poetry.dev-dependencies]
black = "19.3b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
