[tool.poetry]
name = "mirumon-desktop-client"
version = "0.0.1"
description = "Windows monitoring client"

authors = ["Mirumon Team"]
repository = "https://github.com/mirumon/mirumon-descktop-client"

readme = "README.md"
license = "MIT"

packages = [
  { include = "mirumon" }
]


[tool.poetry.scripts]
mirumon = "mirumon.cli.main:cli"


[tool.poetry.dependencies]
# TODO: update to 3.8 after releasing support in nuitka
python = "~3.7"

# core
pydantic = { version = "^1.0", extras = ["dotenv"] }
websockets = "^8.0"
loguru = "^0.3.2"

# windows dependencies
mirumon_windows = { path = "./mirumon/windows", markers = "sys_platform == 'win32'" }

# for cli
typer = { version = "^0.1.1", extras = ["all"] }


[tool.poetry.dev-dependencies]
black = "19.3b0"
isort = "^4.3"
autoflake = "^1.3"

mypy = "^0.770"
wemake-python-styleguide = "^0.14.0"
flake8-fixme = "^1.1"

pytest = "^5.2"
pytest-asyncio = "^0.10.0"
pytest-cov = "^2.8"

httpx = "^0.7.5"
asgi-lifespan = "^0.4.2"


[tool.black]
target_version = ['py37']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |\.hg
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.venv
  |node_modules
  |_build
  |buck-out
  |build
  |dist
  |media
  |infrastructure
  |templates
  |locale
  |docs
)/
'''


[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
