[tool.poetry]
name = "mirumon-desktop-client"
version = "0.1.0"
description = "Desktop monitoring client"

authors = [
    "Nick Khitrov <khitrov34@gmail.com>",
    "Nik Sidnev <snive2013@yandex.ru>"
]
repository = "https://github.com/mirumon/mirumon-descktop-client"

readme = "README.md"
license = "MIT"

packages = [
  { include = "mirumon" }
]


[tool.poetry.scripts]
mirumon = "mirumon.cli.mirumon:cli"


[tool.poetry.dependencies]
python = "3.8"

# core
pydantic = "^1.0"
websockets = "^8.0"
loguru = "^0.3.2"

# for cli
typer = { version = "^0.1.1", extras = ["all"] }

# windows dependencies
mirumon_windows = { path = "./mirumon/windows", markers = "sys_platform == 'win32'" }


[tool.poetry.dev-dependencies]
black = "19.3b0"
isort = "^4.3"
autoflake = "^1.3"

mypy = "^0.770"
wemake-python-styleguide = "^0.14.0"
flake8-fixme = "^1.1"

pytest = "^5.2"
pytest-asyncio = "^0.10.0"
pytest-cov = "^2.8"

httpx = "^0.7.5"
asgi-lifespan = "^0.4.2"


[tool.black]
target_version = ['py37']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |\.hg
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.venv
  |node_modules
  |_build
  |buck-out
  |build
  |dist
  |media
  |infrastructure
  |templates
  |locale
  |docs
)/
'''


[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
